# A-Maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  colors.py  config_default.txt  loading.py  maze_generator.py  parsing.py  pyproject.toml  requirements.txt
mazegen/: README.md  generator.py
tests/: test_maze.py
